welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: error: ';' expected but 'else' found.
  } else {
    ^